# SayIt

./: .gitignore  DEVELOPER.md  ISSUES.md  LICENSE  README.md  ROADMAP.md  VISION.md  environment.yml  pyproject.toml  requirements.txt
src/sayit/: __init__.py  cli.py  config.py  core.py  daemon.py  daemon_runner.py  hotkey.py  indicator.py  injector.py  logging.py  recorder.py  sounds.py  transcriber.py
src/sayit/engines/: __init__.py  base.py  mlx_whisper.py
tests/: __init__.py  manual_test_injector.py  test_config.py  test_daemon.py  test_hotkey.py  test_injector.py  test_mlx_whisper.py  test_recorder.py
