[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sayit"
version = "0.3.0"
description = "Local, privacy-focused voice-to-text for macOS and Linux"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Steve Shao"}
]
keywords = ["voice", "speech-to-text", "whisper", "dictation", "accessibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pynput>=1.7",
    "sounddevice>=0.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
mlx = [
    "mlx-whisper>=0.4",
]
faster = [
    "faster-whisper>=1.0",
]
sensevoice = [
    "funasr>=1.0",
]
all = [
    "sayit[mlx,faster,sensevoice]",
]

[project.scripts]
sayit = "sayit.cli:main"

[project.urls]
Homepage = "https://github.com/steve-shao/sayit"
Repository = "https://github.com/steve-shao/sayit"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "hardware: tests that require actual audio hardware (deselect with '-m \"not hardware\"')",
]
