[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sayit"
version = "0.4.0"
description = "Local voice-to-text for macOS. Hold a key, speak, release—text appears at cursor."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Steve Shao"}
]
keywords = ["voice", "speech-to-text", "sensevoice", "dictation", "accessibility", "macos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pynput>=1.7",
    "sounddevice>=0.4",
    "numpy>=1.26",
    "funasr>=1.0",
    "torch>=2.0",
    "torchaudio>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
sayit = "sayit.cli:main"

[project.urls]
Homepage = "https://github.com/steve-shao/sayit"
Repository = "https://github.com/steve-shao/sayit"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "hardware: tests that require actual audio hardware (deselect with '-m \"not hardware\"')",
]
